--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -17,50 +17,10 @@ header-img: "img/fm/05.jpg"
 </head>
 
 <body>
-<table width="400" border="0">
-  <tr>
-    <td><div align="center"><a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" width="195" height="110" /></a></div></td>
-    <td><div align="center"><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" width="195" height="110" /></a></div></td>
-  </tr>
-  <tr>
-    <td><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a></div></td>
-    <td><div align="center"><a href="http://programme.tvb.com/tvbnewschannel">無線新聞台*</a></div></td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-  <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-  </tr>
-</table>
+<a href="http://123.207.42.38/tvb.php?type=jade"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/jade.jpg" alt="" width="195" height="110" /></a><a href="http://zikbo.lofter.com/0inews0"><img src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/iptv/logo/inews.jpg" alt="" width="195" height="110" /></a>
 </body>
 </html>
+
 <!-- English Version -->
 <!-- <div class="en post-container">
     <blockquote><p>Yet another iOS Developer. <br>
